# TaskMod

./: .gitignore  CLAUDE.md  README.md  customize.sh  module.prop  service.sh
.github/workflows/: build-apk.yml  build.yml  ci.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle  debug.keystore  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/taskmod/app/: BootReceiver.kt  ConfigManager.kt  DaemonControlHelper.kt  DaemonIntegrationExample.kt  DaemonManager.kt  MagiskGuideActivity.kt  MainActivity.kt  NetworkHelper.kt  RootHelper.kt  ServerManager.kt  SettingsActivity.kt  TaskModApp.kt  TaskModService.kt  UpdateChecker.kt  UpdateReceiver.kt  WebViewActivity.kt
android/app/src/main/java/com/taskmod/app/tiles/: ScreenshotTile.kt  ServerToggleTile.kt  UnlockTile.kt
android/app/src/main/java/com/taskmod/app/widget/: TaskModWidget.kt
android/app/src/main/res/drawable/: bg_notification.xml  ic_camera.xml  ic_launcher_foreground.xml  ic_server.xml  ic_unlock.xml  status_dot_running.xml
android/app/src/main/res/layout/: activity_magisk_guide.xml  activity_main.xml  activity_webview.xml  layout_daemon_control.xml  widget_layout.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml  widget_info.xml
daemon/: Cargo.toml  config.example.toml
daemon/src/: config.rs  download.rs  error.rs  ipc.rs  loop.rs  main.rs  process.rs
frontend/: Cargo.toml  Dioxus.toml  build.ps1  build.sh
frontend/assets/: tailwind.css
frontend/src/: app.rs  main.rs
frontend/src/api/: client.rs
frontend/src/components/: mod.rs  shell.rs  sidebar.rs
frontend/src/pages/: chat.rs  config.rs  daemon.rs  dashboard.rs  files.rs  library.rs  logs.rs  mirror.rs  mod.rs  scripts.rs  tasks.rs  tts.rs
frontend/src/pages/chat/: components.rs  mod.rs  state.rs  websocket.rs
sdcard/TaskMod/: README.txt  email.conf  mqtt.conf  schedule.conf
sdcard/TaskMod/scripts/: midea.sh
server/: Cargo.toml
server/src/: config.rs  kcp_stream.rs  main.rs  state.rs
server/src/api/: ai.rs  ai_hub.rs  daemon.rs  files.rs  mirror.rs  mod.rs  scripts.rs  system.rs  tasks.rs  tts.rs
server/src/data/: mod.rs  models.rs  response.rs  tts_config.rs
server/src/platform/: audio.rs  capture.rs  encoder.rs  info.rs  input.rs  mod.rs
server/src/tools/: adb_tools.rs  mod.rs  script_tools.rs  task_tools.rs
server/src/utils/: adb.rs  email.rs  event_monitor.rs  io.rs  mod.rs  mqtt.rs  service_manager.rs
server/static/: api-docs.html  app.js  index.html  style.css
