[package]
name = "taskmod-daemon"
version = "0.1.0"
edition = "2021"
description = "TaskMod cloudflared 隧道守护进程 - 极简设计，零停机热重载"

[dependencies]
# --- 序列化 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# --- Unix系统调用 (信号/进程管理) ---
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"

# --- HTTP客户端 (用于下载cloudflared) ---
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# --- 错误处理 ---
thiserror = "2"

# --- SHA256校验 ---
sha2 = "0.10"

# --- 日志 ---
log = "0.4"
env_logger = "0.11"

# --- 路径处理 ---
dirs-next = "2.0"

# --- 信号处理 ---
ctrlc = "3"

[profile.release]
opt-level = "z"      # 最小化二进制大小
lto = true           # 链接时优化
codegen-units = 1    # 单编译单元，更好优化
panic = "abort"      # 禁用栈展开，减小二进制
strip = true         # 去除符号表