[package]
name = "taskmod-frontend"
version = "0.1.0"
edition = "2021"
description = "TaskMod Dioxus Frontend"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
eq_ui = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "Storage",
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent",
    "HtmlTextAreaElement", "HtmlInputElement", "HtmlSelectElement",
    "Location", "Navigator", "Clipboard", "Blob", "Url",
    "File", "FileReader", "FileList", "DragEvent", "DataTransfer",
    "MediaRecorder", "MediaStream", "BlobPropertyBag",
    "console", "Performance",
    "AudioContext", "AudioBuffer", "AudioBufferSourceNode",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde", "wasmbind"], default-features = false }
gloo-timers = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
