[package]
name = "taskmod-server"
version = "1.0.1"
edition = "2024"
description = "TaskMod Web 管理服务"

[dependencies]
# --- Web框架 ---
axum = "0.6.20"

# --- 异步 ---
tokio = { version = "1.48.0", features = ["full", "process"] }

# --- 序列化 ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# --- Web中间件 ---
tower-http = { version = "0.4", features = ["cors"] }

# --- 工具库 ---
chrono = { version = "0.4.42", features = ["serde", "clock"], default-features = false }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# --- 邮件 (tokio1异步，无TLS避免C依赖) ---
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "hostname", "tokio1"] }

# --- WebSocket (服务端使用，禁用默认特性避免native-tls依赖) ---
tokio-tungstenite = { version = "0.21", default-features = false, features = ["tokio-runtime", "tungstenite"] }
futures-util = "0.3"
bytes = "1"

# --- AI API ---
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
regex = "1.10"

# --- MQTT (轻量级协议，按需加载，使用rustls避免系统OpenSSL依赖) ---
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
