[package]
name = "taskmod-server"
version = "1.0.10"
edition = "2021"
description = "TaskMod Web 管理服务"

[features]
default = ["mqtt"]
mqtt = ["dep:rumqttc"]

[dependencies]
# --- 强制编译OpenSSL源码，解决交叉编译问题 ---
openssl-sys = { version = "0.9", features = ["vendored"] }

# --- Web框架 ---
axum = { version = "0.6.20", features = ["ws", "multipart"] }

# --- 异步 ---
tokio = { version = "1.48.0", features = ["full", "process"] }

# --- 序列化 ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# --- Web中间件 ---
tower-http = { version = "0.4", features = ["cors", "fs"] }

# --- 工具库 ---
chrono = { version = "0.4.42", features = ["serde", "clock"], default-features = false }
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"

# --- 邮件 (tokio1异步，无TLS避免C依赖) ---
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "hostname", "tokio1"] }

# --- WebSocket ---
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"
bytes = "1"

# --- KCP 可靠 UDP（借鉴 RustDesk 的低延迟传输方案）---
kcp = "0.5"

# --- 跨平台支持 ---
async-trait = "0.1"
dirs-next = "2.0"

# --- AI API ---
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
regex = "1.10"

# --- MQTT (轻量级协议，按需加载，使用rustls避免系统OpenSSL依赖) ---
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"], optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
